--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/PROJECTENSAPCTempsAdditionel.loader.js";
+      var loaderUrl = buildUrl + "/TempsAdditionelGZIP.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/PROJECTENSAPCTempsAdditionel.data.unityweb",
-        frameworkUrl: buildUrl + "/PROJECTENSAPCTempsAdditionel.framework.js.unityweb",
-        codeUrl: buildUrl + "/PROJECTENSAPCTempsAdditionel.wasm.unityweb",
+        dataUrl: buildUrl + "/TempsAdditionelGZIP.data.unityweb",
+        frameworkUrl: buildUrl + "/TempsAdditionelGZIP.framework.js.unityweb",
+        codeUrl: buildUrl + "/TempsAdditionelGZIP.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "PROJECT ENSAPC Temps Additionnel",
